other-vpol/memory-requests-equal-limits/memory-requests-equal-limits.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: memory-requests-equal-limits
  annotations:
    policies.kyverno.io/title: Memory Requests Equal Limits in ValidatingPolicy
    policies.kyverno.io/category: Sample in Vpol 
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.17.0
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/description: >-
      Pods which have memory limits equal to requests could be given a QoS class of Guaranteed if
      they also set CPU limits equal to requests. Guaranteed is the highest schedulable class. 
      This policy checks that all containers in a given Pod have memory requests equal to limits.
spec:
  validationActions: 
    - Audit
  evaluation:
    background:
      enabled: false
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  validations:
    - expression: >-
        object.spec.containers.all(container, 
        container.?resources.?requests.?memory ==
        container.?resources.?limits.?memory)
      message: "resources.requests.memory must be equal to resources.limits.memory"
