other-vpol/memory-requests-equal-limits/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: memory-requests-equal-limits-exceptions
policies:
- ../memory-requests-equal-limits.yaml
resources:
- ../.kyverno-test/resource.yaml
- partial-resources.yaml
exceptions:
- exceptions.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: memory-requests-equal-limits
  resources: [myapp-pod]
  result: skip
- isValidatingPolicy: true
  kind: CronJob
  policy: memory-requests-equal-limits
  resources: [hello]
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: memory-requests-equal-limits
  resources: [partial-memory-approved]
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: memory-requests-equal-limits
  resources: [partial-memory-sibling]
  result: fail
